# MBUX

./: CMakeLists.txt  README.md  main.cpp
intent_recognition_lib/: CMakeLists.txt
intent_recognition_lib/headers/: iintent_recognition.h  intent_recognition.h  speech_service.h
intent_recognition_lib/sources/: intent_recognition.cpp  speech_service.cpp
tests/: CMakeLists.txt  mock_intent_recognition.h  test_intent_recognition.cpp  test_speech_service.cpp  test_weather_intent.cpp
weather_intent_lib/: CMakeLists.txt
weather_intent_lib/headers/: iweather_facts.h  weather_facts.h
weather_intent_lib/sources/: weather_facts.cpp
